# SimLED

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainGraphics.cpp  mainHeadless.cpp  progress.md
Arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt  binary.h
Examples/: generator.h  lengthAnimation.h  mouseDataFollower.h
Examples/TriangleSongs/: comeToLife.cpp  danza.cpp  loading.cpp  slip.cpp  supertwister.cpp
FastLED/: CMakeCache.txt  CMakeLists.txt  release_notes.md
FastLED/src/: FastLED.cpp  FastLED.h  arduinoFunctions.h  colorutils.cpp  colorutils.h  controller.h  fastled_delay.h  hsv2rgb.cpp  led_sysdefs.h  lib8tion.cpp  lib8tion.h  pixelset.h  pixeltypes.h
FastLED/src/lib8tion/: math8.h  scale8.h  trig8.h
Graphics/: Button.cpp  Button.h  CMakeLists.txt  Graphics.h  GraphicsUtils.cpp  GraphicsUtils.h  StripElement.cpp  StripElement.h
ObjectSystem/: CMakeLists.txt  LightObject.cpp  LightObject.hpp  LightStrip.cpp  LightStrip.hpp  ObjectSystem.cpp  ObjectSystem.hpp  library.properties
ObjectSystem/animations/: Animation.cpp  Animation.hpp  AnimationFunction.hpp  AnimationFunctions.cpp  AnimationFunctions.hpp  AnimationGroups.cpp  AnimationGroups.h  BaseAnimation.cpp  BaseAnimation.hpp  animations.cpp  animations.hpp
ObjectSystem/src/: ObjectSystem.cpp  ObjectSystem.h
ObjectSystem/src/animations/: Animation.cpp  Animation.h  AnimationFunction.h  AnimationFunctions.cpp  AnimationFunctions.h  AnimationGroups.cpp  AnimationGroups.h  BaseAnimation.cpp  BaseAnimation.h  DataReactor.h
ObjectSystem/src/creators/: AnimationCreators.cpp  AnimationCreators.h  FunctionCreators.cpp  FunctionCreators.h  ObjectCreators.cpp  ObjectCreators.h  SystemCreator.cpp  SystemCreator.h  utils.cpp  utils.h
ObjectSystem/src/linkedlist/: LinkedList.cpp  LinkedList.h
ObjectSystem/src/objects/: Generator.cpp  Generator.h  LightObject.cpp  LightObject.h  ObjectGroup.cpp  ObjectGroup.h  ObjectManager.cpp  ObjectManager.h  ObjectStateMap.cpp  ObjectStateMap.h  PlaceableObject.h
ObjectSystem/src/strips/: LightStrip.cpp  LightStrip.h  StripPath.cpp  StripPath.h
Tests/: CMakeLists.txt  LightObjTests.cpp  TestFunctions.cpp  TestFunctions.h  tests.cpp
Tests/Framework/: TestFramework.cpp  TestFramework.h
Tests/Tests/: AnimationFunctionTests.cpp  AnimationFunctionTests.h  AnimationTests.cpp  AnimationTests.h  GeneratorTests.cpp  GeneratorTests.h  LightObjTests.cpp  LightObjTests.h  StripTests.cpp  StripTests.h
libxd/include/GLFW/: glfw3.h
libxd/include/glm/: common.hpp  geometric.hpp  integer.hpp  packing.hpp
libxd/include/glm/detail/: func_geometric.inl  setup.hpp
libxd/include/glm/gtx/: rotate_vector.inl
libxd/include/xd/: image_fs.hpp
libxd/lib/: embedfile  gs.glsl
